Add comment for QT_QPA_PLATFORM

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -75,6 +75,7 @@ jobs:
       PANDAS_VERSION: ${{ matrix.pandas-version }}
       PYARROW_VERSION: ${{ matrix.pyarrow-version }}
       DISPLAY: 0.0
+      # `QT_QPA_PLATFORM` for resolving 'QXcbConnection: Could not connect to display :0.0'
       QT_QPA_PLATFORM: offscreen
       KOALAS_USAGE_LOGGER: ${{ matrix.logger }}
     steps:
