--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,7 +6,7 @@ numpy>=1.14
 
 # Optional dependencies in Koalas.
 mlflow>=1.0
-# scikit-learn is an optional dependency for mlflow
+# scikit-learn is an optional dependency in mlflow
 scikit-learn
 
 # Dependency issues
