--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,7 +6,6 @@ numpy>=1.14
 
 # Optional dependencies in Koalas.
 mlflow>=1.0
-# scikit-learn is an optional dependency in mlflow
 scikit-learn
 
 # Dependency issues
@@ -26,5 +25,6 @@ flake8
 # Test
 pytest
 pytest-cov
+scikit-learn
 openpyxl
 xlrd
