--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,7 +16,7 @@ jobs:
       SPARK_VERSION: 2.3.4
       # The name of the directory '.cache' is for Travis CI. Once we remove Travis CI,
       # we should download Spark to a directory with a different name to prevent confusion.
-      SPARK_HOME: ~/.cache/spark-versions/spark-2.3.4-bin-hadoop2.7
+      SPARK_CACHE_DIR: ~/.cache/spark-versions
       PANDAS_VERSION: 0.23.4
       PYARROW_VERSION: 0.10.0
       # DISPLAY=0.0 does not work in Github Actions with Python 3.5. Here we work around wtih xvfb-run
@@ -34,7 +34,7 @@ jobs:
           ${{ runner.os }}-pip-
     - uses: actions/cache@v1
       with:
-        path: ${{ env.SPARK_HOME }}
+        path: ${{ env.SPARK_CACHE_DIR }}
         key: ${{ runner.os }}-koalas-spark-${{ env.SPARK_VERSION }}
     # Setup Python 3.5 via `apt-get install` since the dafault Python 3.5 from `actions/setup-python`
     # seems to have some problems with Tkinter, so we should manually install the python3.5-tk.
@@ -57,8 +57,7 @@ jobs:
         pip list
     - name: Run tests
       run: |
-        # Make sure SPARK_HOME is inherited.
-        export SPARK_HOME=$SPARK_HOME
+        export SPARK_HOME="$SPARK_CACHE_DIR/spark-$SPARK_VERSION-bin-hadoop2.7"
         ./dev/lint-python
         ./dev/pytest
     # Push the results back to codecov
@@ -90,10 +89,10 @@ jobs:
       DISPLAY: 0.0
       QT_QPA_PLATFORM: offscreen
       KOALAS_USAGE_LOGGER: ${{ matrix.logger }}
+      MINICONDA_HOME: ~/miniconda
       # The name of the directory '.cache' is for Travis CI. Once we remove Travis CI,
       # we should download Spark to a directory with a different name to prevent confusion.
-      SPARK_HOME: ~/.cache/spark-versions/spark-${{ matrix.spark-version }}-bin-hadoop2.7
-      MINICONDA_HOME: ~/miniconda
+      SPARK_CACHE_DIR: ~/.cache/spark-versions
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
@@ -134,8 +133,7 @@ jobs:
         . $MINICONDA_HOME/etc/profile.d/conda.sh
         conda config --prepend envs_dirs $MINICONDA_HOME/envs
         conda activate test-environment
-        # Make sure SPARK_HOME is inherited.
-        export SPARK_HOME=$SPARK_HOME
+        export SPARK_HOME="$SPARK_CACHE_DIR/spark-$SPARK_VERSION-bin-hadoop2.7"
         ./dev/lint-python
         ./dev/pytest
     # Push the results back to codecov
