--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -100,7 +100,7 @@ jobs:
         java-version: 1.8
     - uses: actions/cache@v1
       with:
-        path: ${{ env.SPARK_HOME }}
+        path: ${{ env.SPARK_CACHE_DIR }}
         key: ${{ runner.os }}-koalas-spark-${{ env.SPARK_VERSION }}
     - name: Install dependencies
       run: |
