remove upper bound

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,5 @@
 # Dependencies in Koalas. When you update don't forget to update setup.py and install.rst in docs.
-pandas>=0.23.2,<=1.0.*
+pandas>=0.23.2
 pyarrow>=0.10,<0.15
 matplotlib>=3.0.0
 numpy>=1.14
