add test pandas>=1.0.0 to matrix

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -70,7 +70,6 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7]
-        pandas-version: [1.0.1]
         include:
           - python-version: 3.6
             spark-version: 2.4.5
@@ -80,6 +79,15 @@ jobs:
           - python-version: 3.7
             spark-version: 2.4.5
             pandas-version: 0.25.3
+            pyarrow-version: 0.14.1
+          # tmp test for pandas>=1.0.0
+          - python-version: 3.6
+            spark-version: 2.4.5
+            pandas-version: 1.0.1
+            pyarrow-version: 0.13.0
+          - python-version: 3.7
+            spark-version: 2.4.5
+            pandas-version: 1.0.1
             pyarrow-version: 0.14.1
     env:
       PYTHON_VERSION: ${{ matrix.python-version }}
