--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -70,16 +70,18 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7]
-        include:
+        spark-version: [2.4.5]
+        pandas-version: [0.24.2, 0.25.3]
+        pyarrow-version: [0.13.0, 0.14.1]
+        exclude:
           - python-version: 3.6
-            spark-version: 2.4.5
-            pandas-version: 0.24.2
-            pyarrow-version: 0.13.0
-            logger: databricks.koalas.usage_logging.usage_logger
-          - python-version: 3.7
-            spark-version: 2.4.5
             pandas-version: 0.25.3
+          - python-version: 3.6
             pyarrow-version: 0.14.1
+          - python-version: 3.7
+            pandas-version: 0.24.2
+          - python-version: 3.7
+            pyarrow-version: 0.13.0
     env:
       PYTHON_VERSION: ${{ matrix.python-version }}
       SPARK_VERSION: ${{ matrix.spark-version }}
@@ -88,7 +90,6 @@ jobs:
       # `QT_QPA_PLATFORM` for resolving 'QXcbConnection: Could not connect to display :0.0'
       DISPLAY: 0.0
       QT_QPA_PLATFORM: offscreen
-      KOALAS_USAGE_LOGGER: ${{ matrix.logger }}
       # The name of the directory '.cache' is for Travis CI. Once we remove Travis CI,
       # we should download Spark to a directory with a different name to prevent confusion.
       SPARK_CACHE_DIR: /home/runner/.cache/spark-versions
@@ -132,6 +133,10 @@ jobs:
         conda config --prepend envs_dirs $HOME/miniconda/envs
         conda activate test-environment
         export SPARK_HOME="$SPARK_CACHE_DIR/spark-$SPARK_VERSION-bin-hadoop2.7"
+        # Set live logger before run test only for python 3.6
+        if [ $PYTHON_VERSION == 3.6 ]; then
+            export KOALAS_USAGE_LOGGER=databricks.koalas.usage_logging.usage_logger
+        fi
         ./dev/lint-python
         ./dev/pytest
     # Push the results back to codecov
