--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -52,6 +52,10 @@ jobs:
         ./dev/download_travis_dependencies.sh
         sudo apt-get install xclip
         pip install setuptools
+        # Currently PIP with Python 3.5 removes Black in the requirements-dev.txt file
+        # as Black only works with Python 3.6+. This is hacky but we will drop
+        # Python 3.5 soon so it's fine.
+        sed -i '/black/d' requirements-dev.txt
         pip install -r requirements-dev.txt
         pip install pandas==$PANDAS_VERSION pyarrow==$PYARROW_VERSION
         pip list
