--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -47,12 +47,12 @@ jobs:
     # Setup Python 3.5 via `apt-get install` since the dafault Python 3.5 from `actions/setup-python`
     # seems to have some problems with Tkinter, so we should manually install the python3.5-tk.
     # For this, we should use the Python manually installed, not the default one from `actions/setup-python`
-    - name: Setup Python 3.5
+    - name: Setup Python ${{ matrix.python-version }}
       run: |
         sudo add-apt-repository ppa:deadsnakes/ppa
-        sudo apt-get install tk-dev python3.5-tk python3.5
+        sudo apt-get install tk-dev python$PYTHON_VERSION-tk python$PYTHON_VERSION
         sudo rm /usr/bin/python
-        sudo ln -s /usr/bin/python3.5 /usr/bin/python
+        sudo ln -s /usr/bin/python$PYTHON_VERSION /usr/bin/python
         # Below command is required for ensuring PIP-installed executables to be in the path.
         echo "::add-path::/home/runner/.local/bin"
     - name: Install dependencies
@@ -65,12 +65,14 @@ jobs:
         # Currently PIP with Python 3.5 removes Black in the requirements-dev.txt file
         # as Black only works with Python 3.6+. This is hacky but we will drop
         # Python 3.5 soon so it's fine.
-        sed -i '/black/d' requirements-dev.txt
+        if [[ "$PYTHON_VERSION" < "3.6" ]]; then sed -i '/black/d' requirements-dev.txt; fi
+        # pydata-sphinx-theme is supported only by pip at this moment.
+        pip install git+https://github.com/pandas-dev/pydata-sphinx-theme.git@master
         pip install -r requirements-dev.txt
         pip install pandas==$PANDAS_VERSION pyarrow==$PYARROW_VERSION pyspark==$SPARK_VERSION
         # matplotlib dropped Python 3.5 support from 3.1.x; however, 3.0.3 only supports sphinx 2.x.
         # It forces the sphinx version to 2.x.
-        pip install "sphinx<3.0.0"
+        if [[ "$PYTHON_VERSION" < "3.6" ]]; then pip install "sphinx<3.0.0"; fi
         pip list
     - name: Run tests
       run: |
