--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -68,6 +68,9 @@ jobs:
         # as Black only works with Python 3.6+. This is hacky but we will drop
         # Python 3.5 soon so it's fine.
         sed -i '/black/d' requirements-dev.txt
+        # 'install-jdk' does not support Python 3.5. This is hacky but we will remove
+        # once Spark 3.0 is released. See also https://github.com/databricks/koalas/pull/1387
+        sed -i '/install-jdk/d' requirements-dev.txt
         pip install -r requirements-dev.txt
         pip install pandas==$PANDAS_VERSION pyarrow==$PYARROW_VERSION
         pip list
