--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -145,6 +145,9 @@ jobs:
         conda config --env --add pinned_packages pandas==$PANDAS_VERSION
         conda config --env --add pinned_packages pyarrow==$PYARROW_VERSION
         conda install -c conda-forge --yes pandas==$PANDAS_VERSION pyarrow==$PYARROW_VERSION
+        # 'install-jdk' does not exist in Conda. This is hacky but we will remove
+        # once Spark 3.0 is released. See also https://github.com/databricks/koalas/pull/1387
+        sed -i '/install-jdk/d' requirements-dev.txt
         conda install -c conda-forge --yes --freeze-installed --file requirements-dev.txt
         conda list
     - name: Run tests
