--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,6 +13,7 @@ jobs:
     name: PIP (Python, Spark, pandas, PyArrow)
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         include:
           - python-version: 3.5
@@ -85,6 +86,7 @@ jobs:
     name: Conda (Python, Spark, pandas, PyArrow)
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         include:
           - python-version: 3.6
