--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -58,17 +58,25 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get install xclip
-        pip install setuptools
+        # It fails due to missing 'bdist_wheel' for some reasons. Explicitly installs it.
+        # See also https://github.com/palantir/python-language-server/issues/524#issuecomment-477068693.
+        pip install wheel setuptools
+        python setup.py bdist_wheel
         # Currently PIP with Python 3.5 removes Black in the requirements-dev.txt file
         # as Black only works with Python 3.6+. This is hacky but we will drop
         # Python 3.5 soon so it's fine.
         sed -i '/black/d' requirements-dev.txt
         pip install -r requirements-dev.txt
         pip install pandas==$PANDAS_VERSION pyarrow==$PYARROW_VERSION pyspark==$SPARK_VERSION
+        # matplotlib dropped Python 3.5 support from 3.1.x; however, 3.0.3 only supports sphinx 2.x.
+        # It forces the sphinx version to 2.x.
+        pip install "sphinx<3.0.0"
         pip list
     - name: Run tests
       run: |
-        ./dev/lint-python
+        # lint-python uses python3 as default. Seems python3 could pick a different Python.
+        # Looks a side effect from manual Python 3.5 installation.
+        PYTHON_EXECUTABLE=python ./dev/lint-python
         ./dev/pytest
     - uses: codecov/codecov-action@v1
 
