Fix the download url.

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -122,7 +122,7 @@ jobs:
         java-version: 1.8
     - name: Install dependencies
       run: |
-        curl -s https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh > miniconda.sh
+        curl -s https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh > miniconda.sh
         bash miniconda.sh -b -p $HOME/miniconda
         # See also https://github.com/conda/conda/issues/7980
         . $HOME/miniconda/etc/profile.d/conda.sh
