--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -106,6 +106,11 @@ jobs:
             spark-version: 2.4.5
             pandas-version: 1.0.3
             pyarrow-version: 0.15.1
+          - python-version: 3.7
+            spark-version: 2.4.5
+            pandas-version: 0.25.3
+            pyarrow-version: 0.14.1
+            spark-master: 'local-cluster[3,2,1024]'
     env:
       PYTHON_VERSION: ${{ matrix.python-version }}
       SPARK_VERSION: ${{ matrix.spark-version }}
@@ -115,6 +120,7 @@ jobs:
       DISPLAY: 0.0
       QT_QPA_PLATFORM: offscreen
       KOALAS_USAGE_LOGGER: ${{ matrix.logger }}
+      SPARK_MASTER: ${{ matrix.spark-master }}
       # Github token is required to auto-generate the release notes from Github release notes
       GITHUB_OAUTH_KEY: ${{ secrets.GITHUB_TOKEN }}
     steps:
